trying to deploy

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Raymondmojica.github.io/Raymondmojica.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -37,6 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://Raymondmojica.github.io"
+  }
 }
