edited links and added descriptions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Raymondmojica.github.io/Raymondmojica.github.io",
+  "homepage": "https://Raymondmojica.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
